# pose-detection

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  pose_overlay_video.py  pyproject.toml  requirements.txt  run_demo.py  shot_director_video.py
src/posedet/: __init__.py  boxes.py  config.py  detection.py  director.py  framing.py  instruments.py  musicians.py  pose.py  poseclass.py  presets.py  runner.py  selection.py  shot_profiles.py  video.py  visualization.py
src/posedet/profiles/: __init__.py  bassist.py  drummer.py  guitarist.py  horns.py  pianist.py  utils.py
tests/: make_baseline.py  test_boxes.py  test_director.py  test_framing.py  test_geometry.py  test_instruments.py  test_musicians.py  test_pipeline_regression.py  test_poseclass.py  test_presets.py  test_runner.py  test_selection.py  test_shot_profiles.py  test_visualization.py
tests/fixtures/: README.md
