[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "posedet"
version = "0.1.0"
description = "Top-down human pose detection on jazz-concert images and video (ViTPose)."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers>=4.48",
    "accelerate",
    "pillow",
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
posedet-demo = "run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that load model weights (deselect with -m 'not slow')",
]
addopts = "-q"
